--- a/notebook.tex
+++ b/notebook.tex
@@ -414,10 +414,10 @@ Observed lifetimes at time 48:
             
     Trueが患者さんが死亡したのを観測できた事例、Falseが観察期間終了により観測できなかった事例です。観察期間の短い順に見ていくと、\\
 t=1のとき、50人のうち2人が死亡,1人が打ち切り。\\
-t=3の時は４７人のうち１人が死亡。\\
+t=2のとき、死亡者、打ち切りなし。 t=3の時は４７人のうち１人が死亡。\\
 t=4の時は46人のうち２人が死亡、２人が打ち切り。\\
 t=5の時は42人中１人死亡、３人が打ち切り。 よって\(S(5)\)は　　 \[
-  S(5) = (1-\frac{1}{50})(1-\frac{1}{47})(1-\frac{2}{46})(1-\frac{1}{42})
+  S(5) = (1-\frac{1}{50})(1-\frac{0}{47})(1-\frac{1}{47})(1-\frac{2}{46})(1-\frac{1}{42})
        = 0.8956028368794325
 \] となります。
 
